--- a/index.html
+++ b/index.html
@@ -99,6 +99,14 @@
                         <input type="color" id="fontColor" value="#000000">
                     </div>
                     <div class="property-group">
+                        <label>Position X:</label>
+                        <input type="number" id="textX" value="0" step="0.1">
+                    </div>
+                    <div class="property-group">
+                        <label>Position Y:</label>
+                        <input type="number" id="textY" value="0" step="0.1">
+                    </div>
+                    <div class="property-group">
                         <label>Orientation:</label>
                         <input type="range" id="textRotation" min="0" max="360" value="0">
                         <span id="rotationValue">0°</span>
