--- a/index.html
+++ b/index.html
@@ -126,8 +126,9 @@
         <!-- Timeline -->
         <div id="timeline">
             <div id="timelineHeader">
-                <div id="timeRuler"></div>
-                <div id="timeCursor"></div>
+                <div id="timeRuler">
+                    <div id="timeCursor"></div>
+                </div>
             </div>
             <div id="timelineLayers"></div>
         </div>
