--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
                 <label for="duration">Duration (s):</label>
                 <input type="number" id="duration" value="5" min="0.1" step="0.1">
             </div>
+            <div class="menu-group">
+                <div id="frameDisplay">
+                    <span class="frame-label">Frame:</span>
+                    <span id="currentFrameDisplay">0</span>
+                    <span class="frame-separator">/</span>
+                    <span id="totalFramesDisplay">150</span>
+                </div>
+                <div id="timeDisplay">
+                    <span class="time-label">Time:</span>
+                    <span id="currentTimeDisplay">0s+0f</span>
+                </div>
+            </div>
         </div>
 
         <!-- Main Content Area -->
