Create new settings file and move settings

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             </div>
             <div class="menu-group">
                 <label for="canvasWidth">Width:</label>
-                <input type="number" id="canvasWidth" value="1920" min="100">
+                <input type="number" id="canvasWidth" value="1000" min="100">
                 <label for="canvasHeight">Height:</label>
-                <input type="number" id="canvasHeight" value="1080" min="100">
+                <input type="number" id="canvasHeight" value="600" min="100">
                 <label for="canvasBackground">Background:</label>
                 <input type="color" id="canvasBackground" value="#ffffff">
                 <label for="frameRate">FPS:</label>
@@ -157,6 +157,7 @@
         </div>
     </div>
 
+    <script src="js/settings.js"></script>
     <script src="js/main.js"></script>
     <script src="js/fonts.js"></script>
     <script src="js/timeline.js"></script>
