--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Font Animation Studio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="https://cdn.jsdelivr.net/npm/opentype.js@1.3.4/dist/opentype.min.js"></script>
 </head>
 
@@ -51,32 +52,32 @@
             <div id="leftToolbar">
                 <div class="tool-group">
                     <button id="handTool" class="tool-btn active" title="Hand Tool (H)">
-                        <span>✋</span>
+                        <span class="material-symbols-outlined">pan_tool</span>
                     </button>
                     <button id="zoomTool" class="tool-btn" title="Zoom Tool (Z)">
-                        <span>🔍</span>
+                        <span class="material-symbols-outlined">search</span>
                     </button>
                     <button id="textTool" class="tool-btn" title="Text Tool (T)">
-                        <span>T</span>
+                        <span class="material-symbols-outlined">text_fields</span>
                     </button>
                     <button id="selectTool" class="tool-btn" title="Select Tool (V)">
-                        <span>↖</span>
+                        <span class="material-symbols-outlined">near_me</span>
                     </button>
                 </div>
                 <div class="tool-group">
                     <button id="playBtn" class="tool-btn" title="Play/Pause (Space)">
-                        <span>▶</span>
+                        <span class="material-symbols-outlined">play_arrow</span>
                     </button>
                     <button id="exportBtn" class="tool-btn" title="Export Video">
-                        <span>📹</span>
+                        <span class="material-symbols-outlined">videocam</span>
                     </button>
                 </div>
                 <div class="tool-group">
                     <button id="undoBtn" class="tool-btn" title="Undo (Cmd+Z)">
-                        <span>↶</span>
+                        <span class="material-symbols-outlined">undo</span>
                     </button>
                     <button id="redoBtn" class="tool-btn" title="Redo (Cmd+Shift+Z)">
-                        <span>↷</span>
+                        <span class="material-symbols-outlined">redo</span>
                     </button>
                 </div>
                 <div class="tool-group">
