Unify timeline containers for scrolling

--- a/index.html
+++ b/index.html
@@ -139,12 +139,16 @@
 
         <!-- Timeline -->
         <div id="timeline">
-            <div id="timelineHeader">
-                <div id="timeRuler">
-                    <div id="timeCursor"></div>
+            <div id="timelineContainer">
+                <div id="timelineContent">
+                    <div id="timelineHeader">
+                        <div id="timeRuler">
+                            <div id="timeCursor"></div>
+                        </div>
+                    </div>
+                    <div id="timelineLayers"></div>
                 </div>
             </div>
-            <div id="timelineLayers"></div>
         </div>
     </div>
 
