Export different video formats

--- a/index.html
+++ b/index.html
@@ -163,6 +163,22 @@
         </div>
     </div>
 
+    <!-- Export Format Modal -->
+    <div id="exportFormatModal" class="modal" style="display: none;">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Export Video</h2>
+            <p>Choose your preferred video format:</p>
+            <div id="formatOptions">
+                <!-- Format options will be populated dynamically -->
+            </div>
+            <div class="modal-buttons">
+                <button id="cancelExport">Cancel</button>
+                <button id="confirmExport" disabled>Export</button>
+            </div>
+        </div>
+    </div>
+
     <script src="js/settings.js"></script>
     <script src="js/main.js"></script>
     <script src="js/fonts.js"></script>
