Show keyboard shortcut for export button

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <button id="playBtn" class="tool-btn" title="Play/Pause (Space)">
                         <span class="material-symbols-outlined">play_arrow</span>
                     </button>
-                    <button id="exportBtn" class="tool-btn" title="Export Video">
+                    <button id="exportBtn" class="tool-btn" title="Export Video (Cmd+E)">
                         <span class="material-symbols-outlined">videocam</span>
                     </button>
                 </div>
