Right-align About button

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
                 <div id="timeDisplay">
                     <span id="currentTimeDisplay">0s+0f</span>
                 </div>
+            </div>
+            <div class="menu-group">
                 <button id="aboutBtn" title="About Font Animation Studio">About</button>
             </div>
         </div>
