Good first step in untangling properties into static and dynamic

--- a/index.html
+++ b/index.html
@@ -108,19 +108,31 @@
                     </div>
                     <div class="property-group">
                         <label>Size:</label>
-                        <input type="number" id="fontSize" value="48" min="1">
+                        <div class="property-input-group">
+                            <input type="number" id="fontSize" value="48" min="1">
+                            <button class="keyframe-btn" data-property="fontSize" title="Add/Remove Keyframe">◆</button>
+                        </div>
                     </div>
                     <div class="property-group">
                         <label>Color:</label>
-                        <input type="color" id="fontColor" value="#000000">
+                        <div class="property-input-group">
+                            <input type="color" id="fontColor" value="#000000">
+                            <button class="keyframe-btn" data-property="color" title="Add/Remove Keyframe">◆</button>
+                        </div>
                     </div>
                     <div class="property-group">
                         <label>Position X:</label>
-                        <input type="number" id="textX" value="0" step="0.1">
+                        <div class="property-input-group">
+                            <input type="number" id="textX" value="0" step="0.1">
+                            <button class="keyframe-btn" data-property="x" title="Add/Remove Keyframe">◆</button>
+                        </div>
                     </div>
                     <div class="property-group">
                         <label>Position Y:</label>
-                        <input type="number" id="textY" value="0" step="0.1">
+                        <div class="property-input-group">
+                            <input type="number" id="textY" value="0" step="0.1">
+                            <button class="keyframe-btn" data-property="y" title="Add/Remove Keyframe">◆</button>
+                        </div>
                     </div>
                     <div class="property-group">
                         <label>Text:</label>
