--- a/index.html
+++ b/index.html
@@ -121,6 +121,14 @@
                         </div>
                     </div>
                     <div class="property-group">
+                        <label>Alignment:</label>
+                        <select id="textAlign">
+                            <option value="left">Left</option>
+                            <option value="center">Center</option>
+                            <option value="right">Right</option>
+                        </select>
+                    </div>
+                    <div class="property-group">
                         <label>Position X:</label>
                         <div class="property-input-group">
                             <input type="number" id="textX" value="0" step="0.1">
