Concurrent timeline scrolling

--- a/index.html
+++ b/index.html
@@ -178,13 +178,15 @@
 
                 <!-- Scrollable timeline content -->
                 <div id="timelineRightColumn">
+                    <!-- Fixed ruler at top -->
+                    <div id="timelineHeader">
+                        <div id="timeRuler">
+                            <div id="timeCursor"></div>
+                        </div>
+                    </div>
+                    <!-- Scrollable content below ruler -->
                     <div id="timelineContainer">
                         <div id="timelineContent">
-                            <div id="timelineHeader">
-                                <div id="timeRuler">
-                                    <div id="timeCursor"></div>
-                                </div>
-                            </div>
                             <div id="timelineLayers"></div>
                         </div>
                     </div>
