--- a/index.html
+++ b/index.html
@@ -102,10 +102,24 @@
             <div id="rightPanel">
                 <div id="textProperties" style="display: none;">
                     <h3>Text Properties</h3>
+                    <!-- Non-numeric properties first -->
                     <div class="property-group">
                         <label>Font:</label>
                         <select id="fontSelect"></select>
                     </div>
+                    <div class="property-group">
+                        <label>Text:</label>
+                        <textarea id="textContent" rows="3"></textarea>
+                    </div>
+                    <div class="property-group">
+                        <label>Alignment:</label>
+                        <select id="textAlign">
+                            <option value="left">Left</option>
+                            <option value="center">Center</option>
+                            <option value="right">Right</option>
+                        </select>
+                    </div>
+                    <!-- Numeric properties below -->
                     <div class="property-group">
                         <label>Size:</label>
                         <div class="property-input-group">
@@ -125,14 +139,6 @@
                         </div>
                     </div>
                     <div class="property-group">
-                        <label>Alignment:</label>
-                        <select id="textAlign">
-                            <option value="left">Left</option>
-                            <option value="center">Center</option>
-                            <option value="right">Right</option>
-                        </select>
-                    </div>
-                    <div class="property-group">
                         <label>Position X:</label>
                         <div class="property-input-group">
                             <input type="number" id="textX" value="0" step="0.1">
@@ -147,10 +153,6 @@
                             <button class="keyframe-btn" data-property="y" title="Add/Remove Keyframe">◆</button>
                             <button class="transition-btn" data-property="y" title="Edit Transition Curve">⟋</button>
                         </div>
-                    </div>
-                    <div class="property-group">
-                        <label>Text:</label>
-                        <textarea id="textContent" rows="3"></textarea>
                     </div>
                     <div id="variableAxes"></div>
                     <div id="openTypeFeatures"></div>
