Make timeliner divider user-adjustbale

--- a/index.html
+++ b/index.html
@@ -167,6 +167,11 @@
             </div>
         </div>
 
+        <!-- Resizable Divider -->
+        <div id="timelineDivider" class="timeline-divider">
+            <div class="divider-handle"></div>
+        </div>
+
         <!-- Timeline -->
         <div id="timeline">
             <div id="timelineLayout">
