--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                 <div id="timeDisplay">
                     <span id="currentTimeDisplay">0s+0f</span>
                 </div>
+                <div id="zoomDisplay">
+                    <span class="zoom-label">Zoom:</span>
+                    <span id="currentZoomDisplay">100%</span>
+                </div>
             </div>
             <div class="menu-group">
                 <button id="aboutBtn" title="About Font Animation Studio">About</button>
