--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Font Animation Studio</title>
     <link rel="stylesheet" href="styles.css">
@@ -60,9 +60,6 @@
                 <div class="tool-group">
                     <button id="handTool" class="tool-btn active" title="Hand Tool (H)">
                         <span class="material-symbols-outlined">pan_tool</span>
-                    </button>
-                    <button id="zoomTool" class="tool-btn" title="Zoom Tool (Z)">
-                        <span class="material-symbols-outlined">search</span>
                     </button>
                     <button id="textTool" class="tool-btn" title="Text Tool (T)">
                         <span class="material-symbols-outlined">text_fields</span>
