--- a/index.html
+++ b/index.html
@@ -93,8 +93,12 @@
 
             <!-- Canvas Area -->
             <div id="canvasContainer">
-                <canvas id="mainCanvas"></canvas>
-                <div id="canvasOverlay"></div>
+                <div id="canvasScrollArea">
+                    <div id="canvasWrapper">
+                        <canvas id="mainCanvas"></canvas>
+                        <div id="canvasOverlay"></div>
+                    </div>
+                </div>
             </div>
 
             <!-- Right Panel -->
