--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             </div>
             <div class="menu-group">
                 <label for="canvasWidth">Width:</label>
-                <input type="number" id="canvasWidth" value="1000" min="100">
+                <input type="number" id="canvasWidth" value="1000" min="100" max="3840">
                 <label for="canvasHeight">Height:</label>
-                <input type="number" id="canvasHeight" value="600" min="100">
+                <input type="number" id="canvasHeight" value="600" min="100" max="2160">
                 <label for="canvasBackgroundColor">Background:</label>
                 <input type="color" id="canvasBackgroundColor" value="#ffffff">
                 <label for="frameRate">FPS:</label>
