--- a/index.html
+++ b/index.html
@@ -253,11 +253,20 @@
 
                 <h3>Keyboard Shortcuts</h3>
                 <div class="shortcuts-grid">
-                    <div><kbd>Space</kbd> Play/Pause</div>
+                    <div><kbd>Enter</kbd> Play/Pause</div>
+                    <div><kbd>Space</kbd> Hold for temporary panning</div>
+                    <div><kbd>H</kbd> Hand tool</div>
+                    <div><kbd>T</kbd> Text tool</div>
+                    <div><kbd>V</kbd> Select tool</div>
                     <div><kbd>←/→</kbd> Navigate frames</div>
                     <div><kbd>Cmd+←/→</kbd> First/Last frame</div>
+                    <div><kbd>Cmd+D</kbd> Duplicate object</div>
+                    <div><kbd>Alt+Drag</kbd> Duplicate while moving</div>
+                    <div><kbd>Cmd+Plus/Minus</kbd> Zoom in/out</div>
+                    <div><kbd>Cmd+0</kbd> Reset zoom</div>
                     <div><kbd>Cmd+E</kbd> Export video</div>
-                    <div><kbd>Cmd+Z</kbd> Undo/Redo</div>
+                    <div><kbd>Cmd+Z/Shift+Z</kbd> Undo/Redo</div>
+                    <div><kbd>Delete</kbd> Delete object</div>
                     <div><kbd>Esc</kbd> Close modals</div>
                 </div>
 
