--- a/index.html
+++ b/index.html
@@ -272,9 +272,14 @@
 
                 <h3>Best Practices for Smooth Results</h3>
                 <div class="best-practices">
-                    <p><strong>Resolution Tip:</strong> For the smoothest possible animations, create your canvas at 2x or 4x your intended final size (limited to 4K resolution), then downsample in your video editor.</p>
-                    <p><strong>Why:</strong> Font outlines are rasterized to the nearest pixel, which can cause subtle jumping during animation. Higher resolution rendering provides more precision that becomes smooth when downsampled.</p>
-                    <p><strong>Example:</strong> For 1080p output, use 2160p (2x) or 4320p (4x) canvas size, then scale down in post-production.</p>
+                    <p><strong>Resolution Tip:</strong> For the smoothest possible animations, create your canvas at 2x
+                        or 4x your intended final size (limited to 4K resolution), then downsample in your video editor.
+                    </p>
+                    <p><strong>Why:</strong> Font outlines are rasterized to the nearest pixel, which can cause subtle
+                        jumping during animation. Higher resolution rendering provides more precision that becomes
+                        smooth when downsampled.</p>
+                    <p><strong>Example:</strong> For 1080p output, use 2160p (2x) or 4320p (4x) canvas size, then scale
+                        down in post-production.</p>
                 </div>
 
                 <div class="about-footer">
