Exit text fields and unselect objects using Escape

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                     <div><kbd>Cmd+E</kbd> Export video</div>
                     <div><kbd>Cmd+Z/Shift+Z</kbd> Undo/Redo</div>
                     <div><kbd>Delete</kbd> Delete object</div>
-                    <div><kbd>Esc</kbd> Close modals</div>
+                    <div><kbd>Esc</kbd> Unselect/Exit fields/Close modals</div>
                 </div>
 
                 <h3>Best Practices for Smooth Results</h3>
