Change label of keyboaard shortcut

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </button>
                 </div>
                 <div class="tool-group">
-                    <button id="playBtn" class="tool-btn" title="Play/Pause (Space)">
+                    <button id="playBtn" class="tool-btn" title="Play/Pause (Enter)">
                         <span class="material-symbols-outlined">play_arrow</span>
                     </button>
                     <button id="exportBtn" class="tool-btn" title="Export Video (Cmd+E)">
