Alignment widget as buttons

--- a/index.html
+++ b/index.html
@@ -116,11 +116,17 @@
                     </div>
                     <div class="property-group">
                         <label>Alignment:</label>
-                        <select id="textAlign">
-                            <option value="left">Left</option>
-                            <option value="center">Center</option>
-                            <option value="right">Right</option>
-                        </select>
+                        <div class="alignment-buttons">
+                            <button class="alignment-btn" data-align="left" title="Align Left">
+                                <span class="material-symbols-outlined">format_align_left</span>
+                            </button>
+                            <button class="alignment-btn" data-align="center" title="Align Center">
+                                <span class="material-symbols-outlined">format_align_center</span>
+                            </button>
+                            <button class="alignment-btn" data-align="right" title="Align Right">
+                                <span class="material-symbols-outlined">format_align_right</span>
+                            </button>
+                        </div>
                     </div>
                     <!-- Numeric properties below -->
                     <div class="property-group">
