Jump to next/prev keyframe with alt+arrowkeys

--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
                     <div><kbd>V</kbd> Select tool</div>
                     <div><kbd>←/→</kbd> Navigate frames</div>
                     <div><kbd>Cmd+←/→</kbd> First/Last frame</div>
+                    <div><kbd>Alt+←/→</kbd> Next/Previous keyframe</div>
                     <div><kbd>Cmd+D</kbd> Duplicate object</div>
                     <div><kbd>Alt+Drag</kbd> Duplicate while moving</div>
                     <div><kbd>Cmd+Plus/Minus</kbd> Zoom in/out</div>
